# Plugin-Netbox

./: README.md  logs.md  pyproject.toml
netbox_topology_vlan/: __init__.py  models.py  navigation.py  template_content.py  urls.py  utils.py  views.py
netbox_topology_vlan/api/: urls.py  views.py
netbox_topology_vlan/templates/netbox_topology_vlan/: mapa.html
netbox_topology_vlan/templates/netbox_topology_vlan/inc/: topology_button.html
plugin-name/: __init__.py
plugin-name/api/: views.py
