# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-topology-vlan"
version = "0.1.0"
authors = [
    {name = "Francisco Lopes", email = "A49852@alunos.isel.pt"},
    {name = "João Constantino", email = "A49323@alunos.isel.pt"}
]
description = "Plugin para Visualização Dinâmica e Automação de Topologias Lógicas (VLANs) em NetBox."
readme = "README.md"

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

requires-python = ">=3.12.0"